--- a/lnE/lnD/lnD.csproj
+++ b/lnE/lnD/lnD.csproj
@@ -84,6 +84,7 @@
   <ItemGroup>
     <None Include="App.config">
       <SubType>Designer</SubType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
   <ItemGroup>
